# parental_care

./: .gitattributes  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
src/caregiving/: estimate.py  task_estimate.py
src/caregiving/counterfactual/: state_space_counterfactual.py  task_simulate_counterfactual.py  task_specify_counterfactual.py
src/caregiving/data_management/: backup_create_parent_child_data_set.py  task_create_estimation_data_set.py  task_create_parent_child_data_set.py  task_merge_parent_child_waves.py  task_merge_waves.py
src/caregiving/estimation/: standard_errors.py  task_estimate_standard_errors.py
src/caregiving/exogenous_processes/: create_exog_processes_copy.py  task_create_exog_processes.py
src/caregiving/model/: budget.py  exogenous_processes.py  state_space.py  task_check_solve.py  task_create_model_dictionary.py  task_debugging.py  task_model_fit.py  task_specify_model.py  utility_functions.py
src/caregiving/moments/: task_care_mix_statistical_office.py  task_create_auxiliary_moments.py  task_create_care_mix_coefficients.py  task_create_cpi_germany.py  task_create_empirical_cov.py  task_create_empirical_moments.py  task_initial_conditions.py  task_simulate_moments.py
src/caregiving/sandbox/: run.py
src/caregiving/simulation/: initial_conditions.py  simulate.py
src/sandbox/: motivating_descriptives.ipynb
tests/: test_empirical_moments.py  test_estimation_data.py  test_exog_transition_probs.py  test_import.py  test_merge_waves.py
