[metadata]
name = caregiving
description = A project for ...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/segsell/caregiving
author = Sebastian Gsell
author_email = gsell.sebastian@gmail.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/segsell/caregiving
    Documentation = https://github.com/segsell/caregiving
    Github = https://github.com/segsell/caregiving
    Tracker = https://github.com/segsell/caregiving/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/caregiving/_version.py
